--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cli-table": "^0.3.11",
+    "colors": "^1.4.0",
     "dotenv": "^16.3.1",
     "inquirer": "^8.2.4",
     "mysql2": "^3.6.2"
